<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Numeric Scale -->
    <com.example.rdpocketpal2.settings.NumberPickerPreference
        android:icon="@drawable/ic_compare_arrows_grey_24dp"
        android:key="@string/key_numeric_scale"
        android:title="@string/text_numeric_scale"
        app:maxValue="5"
        app:minValue="0"
        app:wrapSelectorWheel="true" />

    <!-- Rounding Method -->
    <ListPreference
        android:defaultValue="@string/key_rounding"
        android:entries="@array/decimal_reduction_method_choices"
        android:entryValues="@array/decimal_reduction_method_choices"
        android:icon="@drawable/ic_compare_arrows_grey_24dp"
        android:key="@string/key_decimal_reduction_method"
        android:title="@string/text_decimal_reduction_method" />

</PreferenceScreen>